--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -12,11 +13,21 @@
 			<option value="square">square</option>
 			<option value="triangle">triangle</option>
 		</select>
-		<input type="range" min="0" max="1" step=".01" value=".1" onchange="setVol(this.value)">
-		A<input type="range" min="0" max="5" step=".01" value=".1" onchange="setAttack(this.value)">
-		D<input type="range" min="0" max="5" step=".01" value=".1" onchange="setDecay(this.value)">
-		S<input type="range" min="0" max="1" step=".01" value="1" onchange="setSustain(this.value)">
-		R<input type="range" min="0" max="5" step=".01" value=".1" onchange="setRelease(this.value)">
+		<div class="adsr">
+			Master volume<input id="v" type="range" min="0" max="1" step=".01" value=".4">
+			Attack<input id="a" type="range" min="0" max="5" step=".01" value=".1" onchange="setAttack(this.value)">
+			Attack level<input id="l" type="range" min="0" max="5" step=".01" value=".1" onchange="setAttackLevel(this.value)">
+			Decay<input id="d" type="range" min="0" max="5" step=".01" value=".1" onchange="setDecay(this.value)">
+			Sustain<input id="s" type="range" min="0" max="1" step=".01" value="1" onchange="setSustain(this.value)">
+			Release<input id="r" type="range" min="0" max="5" step=".01" value=".1" onchange="setRelease(this.value)">
+			<input>
+		</div>
+		<input id="reverb" type="checkbox"><label>Reverb</label>
+		<form id="filter">
+			<input id="lpfilter" type="radio" name="filter">
+			<input id="hpfilter" type="radio" name="filter">
+			<input id="bpfilter" type="radio" name="filter">
+		</form>
 	</div>
 </body>
 <script type="text/javascript" src="script.js"></script>
