--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 		</div>
 		<input id="reverb" type="checkbox"><label>Reverb</label>
 		<form id="filter">
-			<input id="lpfilter" type="radio" name="filter">
-			<input id="hpfilter" type="radio" name="filter">
-			<input id="bpfilter" type="radio" name="filter">
+			<input id="lpfilter" type="radio" name="filter"><label>Low-Pass</label>
+			<input id="hpfilter" type="radio" name="filter"><label>High-Pass</label>
+			<input id="bpfilter" type="radio" name="filter"><label>Band-Pass</label>
+			<input id="nofilter" type="radio" name="filter"><label>No Filter</label>
 		</form>
 	</div>
 </body>
