optimized. set saw to default because it's more distinct

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div>
 		<select id="selection" onchange="setWave()">
 			<option value="sine">sine</option>
-			<option value="sawtooth">saw</option>
+			<option value="sawtooth" selected="selected">saw</option>
 			<option value="square">square</option>
 			<option value="triangle">triangle</option>
 		</select>
