--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
 			<option value="square">square</option>
 			<option value="triangle">triangle</option>
 		</select>
+		<select id="phonic">
+			<option value="poly">polyphonic</option>
+			<option value="mono">monophonic</option>
+		</select>
+		<div class="pitch">
+			<input id="pitch" type="range" min="-24" max="24" step="1" value="0">
+		</div>
 		<div class="adsr">
 			Master volume<input id="v" type="range" min="0" max="1" step=".01" value=".4">
-			Attack<input id="a" type="range" min="0" max="5" step=".01" value=".1" onchange="setAttack(this.value)">
-			Attack level<input id="l" type="range" min="0" max="5" step=".01" value=".1" onchange="setAttackLevel(this.value)">
-			Decay<input id="d" type="range" min="0" max="5" step=".01" value=".1" onchange="setDecay(this.value)">
-			Sustain<input id="s" type="range" min="0" max="1" step=".01" value="1" onchange="setSustain(this.value)">
-			Release<input id="r" type="range" min="0" max="5" step=".01" value=".1" onchange="setRelease(this.value)">
-			<input>
+			Attack<input id="a" type="range" min="0" max="5" step=".01" value=".1">
+			Attack level<input id="l" type="range" min="0" max="5" step=".01" value=".1">
+			Decay<input id="d" type="range" min="0" max="5" step=".01" value=".1">
+			Sustain<input id="s" type="range" min="0" max="1" step=".01" value="1">
+			Release<input id="r" type="range" min="0" max="5" step=".01" value=".1">
 		</div>
 		<input id="reverb" type="checkbox"><label>Reverb</label>
 		<form id="filter">
@@ -29,6 +35,7 @@
 			<input id="bpfilter" type="radio" name="filter"><label>Band-Pass</label>
 			<input id="nofilter" type="radio" name="filter"><label>No Filter</label>
 		</form>
+		<canvas id="oscilloscope"></canvas>
 	</div>
 </body>
 <script type="text/javascript" src="script.js"></script>
